@@ -115,6 +115,7 @@ class LibraryFunctions():
                 "playlist-video":None,
                 "playlist-audio":None,
                 "addon-program":None,
+                "addon-program-plugin":None,
                 "addon-video":None,
                 "addon-audio":None,
                 "addon-image":None,
@@ -1271,6 +1272,7 @@ class LibraryFunctions():
             log( 'Loading add-ons' )
 
             executableItems = {}
+            executablePluginItems = {}
             videoItems = {}
             audioItems = {}
             imageItems = {}
@@ -1311,31 +1313,38 @@ class LibraryFunctions():
                             if item[ "type" ] == "xbmc.python.pluginsource":
                                 path = "||BROWSE||" + item['addonid'].encode('utf-8')
                                 action = "RunAddOn(" + item['addonid'].encode('utf-8') + ")"
-                            elif contenttype == "executable":
-                                # Check if it's a program that can be run as an exectuble
-                                provides = self.hasPluginEntryPoint( item[ "path" ] )
-                                if provides is None:
-                                    continue
-                                
-                                for content in provides:
-                                    # For each content that it provides, add it to the add-ons for that type
-                                    contentData = { "video": [ "::SCRIPT::32010", videoItems ], "audio": [ "::SCRIPT::32011", audioItems ], "image": [ "::SCRIPT::32012", imageItems ], "executable": [ "::SCRIPT::32009", executableItems ] }
-                                    if content in contentData:
-                                        otherItem = self._create([path, item['name'] + "  >", contentData[ content ][ 0 ], {"icon": "DefaultAddon.png", "thumb": thumb} ])
-                                        otherItem.setProperty( "path", "||BROWSE||" + item['addonid'].encode('utf-8') )
-                                        otherItem.setProperty( "action", "RunAddOn(" + item['addonid'].encode('utf-8') + ")" )
-                                        contentData[ content ][ 1 ][ item[ "name" ] ] = otherItem                                        
 
-                            if action is not None:
                                 listitem.setProperty( "path", path )
                                 listitem.setProperty( "action", action )
                                 listitem.setLabel( listitem.getLabel() + "  >" )
 
+                                # If its executable, save it to our program plugin widget list
+                                if contenttype == "executable":
+                                    executablePluginItems[ item[ "name" ] ] = listitem
+
+                            elif contenttype == "executable":
+                                # Check if it's a program that can be run as an exectuble
+                                provides = self.hasPluginEntryPoint( item[ "path" ] )
+                                for content in provides:
+                                    # For each content that it provides, add it to the add-ons for that type
+                                    contentData = { "video": [ "::SCRIPT::32010", videoItems ], "audio": [ "::SCRIPT::32011", audioItems ], "image": [ "::SCRIPT::32012", imageItems ], "executable": [ "::SCRIPT::32009", executableItems ] }
+                                    if content in contentData:
+                                        # Add it as a plugin in the relevant category
+                                        otherItem = self._create([path, item['name'] + "  >", contentData[ content ][ 0 ], {"icon": "DefaultAddon.png", "thumb": thumb} ])
+                                        otherItem.setProperty( "path", "||BROWSE||" + item['addonid'].encode('utf-8') )
+                                        otherItem.setProperty( "action", "RunAddOn(" + item['addonid'].encode('utf-8') + ")" )
+                                        contentData[ content ][ 1 ][ item[ "name" ] ] = otherItem
+                                        # If it's executable, add it to our seperate program plugins for widgets
+                                        if content == "executable":
+                                            executablePluginItems[ item[ "name" ] ] = otherItem
+
+                            # Save the listitem
                             listitems[ item[ "name" ] ] = listitem
                             
                 if contenttype == "executable":
                     self.addToDictionary( "addon-program", self.sortDictionary( listitems ) )
-                    log( " - " + str( len( listitems ) ) + " programs found" )
+                    self.addToDictionary( "addon-program-plugin", self.sortDictionary( executablePluginItems ) )
+                    log( " - %s programs found (of which %s are plugins)" %( str( len( listitems ) ), str( len( executablePluginItems ) ) ) )
                 elif contenttype == "video":
                     self.addToDictionary( "addon-video", self.sortDictionary( listitems ) )
                     log( " - " + str( len( listitems ) ) + " video add-ons found" )
@@ -1362,18 +1371,12 @@ class LibraryFunctions():
                     # Find out what content type it provides
                     provides = extension.find( "provides" )
                     if provides is None:
-                        return None
-                    return provides.text.split( " " )
-                elif "point" in extension.attrib and extension.attrib.get( "point" ) == "xbmc.python.script":
-                    # Script entry points should be treated as executable
-                    provides = extension.find( "provides" )
-                    if provides is None:
-                        return None
+                        return []
                     return provides.text.split( " " )
 
         except:
-            return None
-        return None
+            print_exc()
+        return []
     
     def detectPluginContent(self, item):
         #based on the properties in the listitem we try to detect the content
@@ -1688,8 +1691,18 @@ class LibraryFunctions():
                     listitem.setProperty( "widgetTarget", "pictures" )
                     listitem.setProperty( "widgetName", dialogLabel )
                     listitem.setProperty( "widgetPath", location )
+                    
                 elif itemType == "32009":
                     action = 'ActivateWindow(10001,"' + location + '",return)'
+                    listitem.setProperty( "windowID", "10001" )
+
+                    # Add widget details
+                    listitem.setProperty( "widget", "Addon" )
+                    listitem.setProperty( "widgetType", "program" )
+                    listitem.setProperty( "widgetTarget", "programs" )
+                    listitem.setProperty( "widgetName", dialogLabel )
+                    listitem.setProperty( "widgetPath", location )
+
                 else:
                     action = "RunAddon(" + location + ")"
 
