@@ -200,6 +200,9 @@
 			<content>picturesources</content>
 		</node>
 		<node label="32007">
+			<node label="32009">
+				<content>addon-program-plugin</content>
+			</node>
 			<node label="32010">
 				<content>addon-video</content>
 			</node>
